--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bs-oak/html",
-  "version": "0.1.9",
+  "version": "0.1.10",
   "scripts": {
     "clean": "bsb -clean-world",
     "build": "bsb -make-world",
@@ -15,6 +15,7 @@
     "bs-platform": "^3.1.5"
   },
   "dependencies": {
+    "@bs-oak/file": "^0.1.1",
     "@bs-oak/json": "^0.1.3",
     "@bs-oak/virtual-dom": "^0.1.7"
   }
