--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
   "author": "Erik Lott",
   "license": "MIT",
   "devDependencies": {
+    "@glennsl/bs-jest": "^0.4.6",
     "bs-platform": "^4.0.18"
   },
   "dependencies": {
     "@bs-oak/file": "^0.1.3",
     "@bs-oak/json": "^0.1.5",
-    "@bs-oak/virtual-dom": "^0.2.0"
+    "@bs-oak/virtual-dom": "^0.5.0"
   }
 }
